REGRESSION(r218064): [GTK] Broke entering fullscreen mode in debug builds https://bugs.webkit.org/show_bug.cgi?id=180120

Reviewed by Carlos Garcia Campos.

These assertions need to be swapped. Fixes /webkit2/WebKitWebView/fullscreen in debug mode.

* UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseEnterFullScreen):
(webkitWebViewBaseExitFullScreen):


Canonical link: https://commits.webkit.org/196128@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225267 268f45cc-cd09-0410-ab3c-d52691b4dbfc